--- a/book/index.html
+++ b/book/index.html
@@ -198,7 +198,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </div>
 <div id="predictive-modeling" class="section level2">
 <h2><span class="header-section-number">1.2</span> Predictive Modeling</h2>
-<p>This lecture is concerned primarily with Predictive Modeling. Some use cases of Predictive Modeling include:</p>
+<p>This lecture is concerned primarily with Predictive Modeling. Some examples of Predictive Modeling include:</p>
 <ul>
 <li><p>Predict current CD4 cell count of an HIV-positive patient using genome sequences</p></li>
 <li><p>Predict Success of Grant Applications</p></li>
