Added in workflow overview

--- a/book/index.html
+++ b/book/index.html
@@ -142,15 +142,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="getting-hands-on.html"><a href="getting-hands-on.html#important-terminology"><i class="fa fa-check"></i><b>2.1</b> Important Terminology</a></li>
 <li class="chapter" data-level="2.2" data-path="getting-hands-on.html"><a href="getting-hands-on.html#exploratory-plots"><i class="fa fa-check"></i><b>2.2</b> Exploratory Plots</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html"><i class="fa fa-check"></i><b>3</b> A Common Modeling Workflow</a><ul>
-<li class="chapter" data-level="3.1" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#splitting-the-data"><i class="fa fa-check"></i><b>3.1</b> Splitting The Data</a></li>
-<li class="chapter" data-level="3.2" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#first-model"><i class="fa fa-check"></i><b>3.2</b> First Model</a></li>
-<li class="chapter" data-level="3.3" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#first-prediction"><i class="fa fa-check"></i><b>3.3</b> First Prediction</a><ul>
-<li class="chapter" data-level="3.3.1" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#selecting-the-correct-alpha"><i class="fa fa-check"></i><b>3.3.1</b> Selecting The Correct Alpha</a></li>
-<li class="chapter" data-level="3.3.2" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#confusion-matrices"><i class="fa fa-check"></i><b>3.3.2</b> Confusion Matrices</a></li>
+<li class="chapter" data-level="3" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html"><i class="fa fa-check"></i><b>3</b> Build A Model - A Detailed Workflow</a><ul>
+<li class="chapter" data-level="3.1" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#splitting-the-data"><i class="fa fa-check"></i><b>3.1</b> Splitting The Data</a></li>
+<li class="chapter" data-level="3.2" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#first-model"><i class="fa fa-check"></i><b>3.2</b> First Model</a></li>
+<li class="chapter" data-level="3.3" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#first-prediction"><i class="fa fa-check"></i><b>3.3</b> First Prediction</a><ul>
+<li class="chapter" data-level="3.3.1" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#selecting-the-correct-alpha"><i class="fa fa-check"></i><b>3.3.1</b> Selecting The Correct Alpha</a></li>
+<li class="chapter" data-level="3.3.2" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#confusion-matrices"><i class="fa fa-check"></i><b>3.3.2</b> Confusion Matrices</a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#performance-measures-revisited"><i class="fa fa-check"></i><b>3.4</b> Performance Measures Revisited</a></li>
-<li class="chapter" data-level="3.5" data-path="a-common-modeling-workflow.html"><a href="a-common-modeling-workflow.html#the-roc-curve"><i class="fa fa-check"></i><b>3.5</b> The ROC curve</a></li>
+<li class="chapter" data-level="3.4" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#performance-measures-revisited"><i class="fa fa-check"></i><b>3.4</b> Performance Measures Revisited</a></li>
+<li class="chapter" data-level="3.5" data-path="build-a-model-a-detailed-workflow.html"><a href="build-a-model-a-detailed-workflow.html#the-roc-curve"><i class="fa fa-check"></i><b>3.5</b> The ROC curve</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="other-methods.html"><a href="other-methods.html"><i class="fa fa-check"></i><b>4</b> Other Methods ?</a><ul>
 <li class="chapter" data-level="4.1" data-path="other-methods.html"><a href="other-methods.html#improving-the-models"><i class="fa fa-check"></i><b>4.1</b> Improving The Model(s)</a></li>
