reworked the Kfold graphic

--- a/book/index.html
+++ b/book/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steve Pittard" />
 
 
-<meta name="date" content="2020-12-14" />
+<meta name="date" content="2020-12-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -202,7 +202,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Predictive Modeling</h1>
 <p class="author"><em>Steve Pittard</em></p>
-<p class="date"><em>2020-12-14</em></p>
+<p class="date"><em>2020-12-15</em></p>
 </div>
 <div id="intro" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
@@ -228,7 +228,7 @@ clustering, mixture models, DBSCAN, Association Rules, Neural Networks</p>
 </div>
 <div id="predictive-modeling" class="section level2">
 <h2><span class="header-section-number">1.2</span> Predictive Modeling</h2>
-<p>This lecture is concerned primarily with Predictive Modeling. Some examples of Predictive Modeling include:</p>
+<p>This lecture is concerned primarily with Predictive Modeling and Supervised approaches in particular. Some examples of Predictive Modeling include:</p>
 <ul>
 <li><p>Predict current CD4 cell count of an HIV-positive patient using genome sequences</p></li>
 <li><p>Predict Success of Grant Applications</p></li>
