--- a/book/build-a-model-a-detailed-workflow.html
+++ b/book/build-a-model-a-detailed-workflow.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steve Pittard" />
 
 
-<meta name="date" content="2020-12-15" />
+<meta name="date" content="2020-12-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -275,10 +275,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <span id="cb12-3"><a href="build-a-model-a-detailed-workflow.html#cb12-3"></a>                 <span class="dt">type =</span> <span class="st">&quot;response&quot;</span>)</span>
 <span id="cb12-4"><a href="build-a-model-a-detailed-workflow.html#cb12-4"></a></span>
 <span id="cb12-5"><a href="build-a-model-a-detailed-workflow.html#cb12-5"></a>probs[<span class="dv">1</span><span class="op">:</span><span class="dv">10</span>]</span></code></pre></div>
-<pre><code>##          1          3          9         17         22         27         28 
-## 0.70756327 0.79695675 0.74524797 0.36330982 0.31803457 0.74106187 0.04892642 
-##         32         42         43 
-## 0.56777794 0.68427254 0.11927265</code></pre>
+<pre><code>##          1          3          9         17         22         27         28         32 
+## 0.70756327 0.79695675 0.74524797 0.36330982 0.31803457 0.74106187 0.04892642 0.56777794 
+##         42         43 
+## 0.68427254 0.11927265</code></pre>
 <p>With logistic regression we are dealing with a curve like the one below which is a sigmoid function. The idea is to take our probabilities, which range between 0 and 1, and then pick a threshold over which we would classify that person as being positive for diabetes. In this context, we have a continuum.</p>
 <p><img src="SEMINAR_SERIES_files/figure-html/logitplot-1.png" width="672" /></p>
 </div>
