Added in new stuff

--- a/book/index.html
+++ b/book/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steve Pittard" />
 
 
-<meta name="date" content="2020-12-16" />
+<meta name="date" content="2020-12-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -172,12 +172,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="6.0.2" data-path="feature-importance.html"><a href="feature-importance.html#the-rfe-function"><i class="fa fa-check"></i><b>6.0.2</b> The rfe Function</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="comparing-models.html"><a href="comparing-models.html"><i class="fa fa-check"></i><b>7</b> Comparing Models</a></li>
-<li class="chapter" data-level="8" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html"><i class="fa fa-check"></i><b>8</b> Using Exeternal ML Frameworks</a><ul>
-<li class="chapter" data-level="8.1" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html#h2o-in-action"><i class="fa fa-check"></i><b>8.1</b> H2O In Action</a></li>
-<li class="chapter" data-level="8.2" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html#create-some-models"><i class="fa fa-check"></i><b>8.2</b> Create Some Models</a></li>
-<li class="chapter" data-level="8.3" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html#saving-a-model"><i class="fa fa-check"></i><b>8.3</b> Saving A Model</a></li>
-<li class="chapter" data-level="8.4" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html#using-the-auto-ml-feature"><i class="fa fa-check"></i><b>8.4</b> Using the Auto ML Feature</a></li>
-<li class="chapter" data-level="8.5" data-path="using-exeternal-ml-frameworks.html"><a href="using-exeternal-ml-frameworks.html#launching-a-job"><i class="fa fa-check"></i><b>8.5</b> Launching A Job</a></li>
+<li class="chapter" data-level="8" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html"><i class="fa fa-check"></i><b>8</b> Using External ML Frameworks</a><ul>
+<li class="chapter" data-level="8.1" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html#h2o-in-action"><i class="fa fa-check"></i><b>8.1</b> H2O In Action</a></li>
+<li class="chapter" data-level="8.2" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html#create-some-models"><i class="fa fa-check"></i><b>8.2</b> Create Some Models</a></li>
+<li class="chapter" data-level="8.3" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html#saving-a-model"><i class="fa fa-check"></i><b>8.3</b> Saving A Model</a></li>
+<li class="chapter" data-level="8.4" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html#using-the-auto-ml-feature"><i class="fa fa-check"></i><b>8.4</b> Using the Auto ML Feature</a></li>
+<li class="chapter" data-level="8.5" data-path="using-external-ml-frameworks.html"><a href="using-external-ml-frameworks.html#launching-a-job"><i class="fa fa-check"></i><b>8.5</b> Launching A Job</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -202,7 +202,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Predictive Modeling</h1>
 <p class="author"><em>Steve Pittard</em></p>
-<p class="date"><em>2020-12-16</em></p>
+<p class="date"><em>2020-12-17</em></p>
 </div>
 <div id="intro" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
